@@ -86,6 +86,8 @@ VERSION 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Lyrics, labels and album actions are correctly displayed for tracks
+      from main and saved playlists on Amarok startup. (BR 299150)
     * Lyrics applet scrolls more intelligently. Patch by Alexander Potashev.
       (BR 283601)
     * Fix crash on startup related to ContextView. (BR 258741)
